# WebAssembly

./: .gitignore  CMakeLists.txt  README.md  index.html  index.js  mainwindow.cpp  mainwindow.ui  models.h  vcpkg.json
docs/: WebAssembly.js  index.html
triplets/: wasm32-emscripten.cmake
